deploy/prod/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pos-soft
  namespace: card-processing
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - post-sof.unibank.lan
      port:
        name: http
        number: 80
        protocol: HTTP
