deploy/prod/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: soft-pos-service
  namespace: card-processing
spec:
  hosts:
    - post-sof.unibank.lan
  gateways:
    - pos-soft
  http:
      route:
        - destination:
            host: soft-pos-serviceV2.card-processing.svc.cluster.local
            port:
              number: 8080
